bug-fix: Implemented additional endpoint to fetch other active users profile.
