# cmd/api/api.go
@@ -117,12 +117,13 @@ func (app *application) mount() http.Handler {
 			})
 		})
 
-		r.Route("/users", func(r chi.Router) {
+		r.Route("/user", func(r chi.Router) {
 			r.Put("/activate/{token}", app.activateUserHandler)
 
 			r.Route("/{userID}", func(r chi.Router) {
 				r.Use(app.AuthTokenMiddleware())
 
+				r.Get("/", app.getUserHandler)
 				r.Put("/follow", app.followUserHandler)
 				r.Put("/unfollow", app.unfollowUserHandler)
 			})
@@ -130,7 +131,7 @@ func (app *application) mount() http.Handler {
 			r.Group(func(r chi.Router) {
 				r.Use(app.AuthTokenMiddleware())
 
-				r.Get("/", app.getUserHandler)
+				r.Get("/", app.getUserProfile)
 				r.Get("/feed", app.getUserFeedHandler)
 			})
 		})
